--- a/data/blog/projects/novel-path-clearance-algorithm.mdx
+++ b/data/blog/projects/novel-path-clearance-algorithm.mdx
@@ -19,7 +19,7 @@ The proposed Novel Path Clearance Algorithm enables the users in transit along t
    <p align="center">
      <Image
        alt={`Algorithm`}
-       src={`/static/images/blogs/pca/algorithm.jpg`}
+       src={`/static/images/blogs/pca/algorithm.JPG`}
        width={1980 / 2}
        height={1114 / 2}
        priority
@@ -65,7 +65,7 @@ Figure 1.1: Dividing the Polyline Object into an array of Waypoints, determining
    <p align="center">
      <Image
        alt={`Algorithm Depiction`}
-       src={`/static/images/blogs/pca/algoDepiction.jpg`}
+       src={`/static/images/blogs/pca/algoDepiction.JPG`}
        width={250}
        height={300}
        priority
@@ -89,7 +89,7 @@ When it comes to the Two Way Street Edge Case, SAL maps employs a sophisticated 
 <p align="center">
   <Image
     alt={`Two way street edge case`}
-    src={`/static/images/blogs/pca/twoWay.jpg`}
+    src={`/static/images/blogs/pca/twoWay.JPG`}
     width={250}
     height={300}
     priority
